<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercise3_ver1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="age">Age</string>
    <string name="skill">Professional Skill</string>
    <string name="phone">Phone Number</string>
    
    <string name="ok">OK</string>
    

</resources>
